@@ -13,6 +13,8 @@ http://www.ietf.org/rfc/rfc2696.txt
 
 Changes in version 1.2.2 (XXX 2008)
 -------------------------------------------
+* Removed deprecated method setUserName() in AbstractContextSource.
+
 * Added a method DistinguishedName.toCompactString that returns a more
   compact String representation without blanks. (LDAP-91)
 
